--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,19 +1,3 @@
-.center {
-    position: absolute;
-    left: 0;
-    top: 12%;
-    width: 100%;
-    text-align: center;
-    font-size: 30px;
-    color: blue
-  }
-.selector1 {
-    position: absolute;
-    left:5%;
-    top:20%;
-}
-.selector2 {
-    position: absolute;
-    left:5%;
-    top:30%;
+.pt-64{
+    padding-top: 64px;
 }
