--- a/client/src/app/mynav/mynav.component.html
+++ b/client/src/app/mynav/mynav.component.html
@@ -6,7 +6,8 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/dash">Dashboard</a>
-      <a mat-list-item routerLink="/table">table</a>
+      <a mat-list-item routerLink="/home">Home</a>
+      <a mat-list-item routerLink="/consult">Consult Doctor</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -21,7 +22,9 @@
       </button>
       <span>MediCenter</span>
     </mat-toolbar>
-    <ng-content></ng-content>
+    <ng-content>
+      
+    </ng-content>
     <!-- Add Content Here -->
   </mat-sidenav-content>
 </mat-sidenav-container>
